# pystrap

./: LICENSE.txt  README.md  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: run-qa-checks.yml
dev_notes/: requirements.txt
docs/: pystrap_specifications.tex
notes/: 2023_08_29_unterschied_setupcfg_pyprojecttoml.txt  requirements.txt
src/pystrap/: config_writers.py  io_operations.py  main.py  system_core.py
tests/: config_writer_test.py  io_operations_test.py
