[project]
name = "pystrap"
version = "2.0.0"
description = "A simple CLI util to setup python projects."
requires-python = ">=3.10"
authors = [
    {name = "Max Weise", email = "maxfencing@web.de"},
]
maintainers = [
    {name = "Max Weise", email = "maxfencing@web.de"},
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10:"
]

[build-system]
requires = ["setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
