[project]
name = "pystrap"
version = "3.0.0"
description = "A simple CLI util to setup python projects."
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Max Weise", email = "maxfencing@web.de"},
]

maintainers = [
    {name = "Max Weise", email = "maxfencing@web.de"},
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10:"
]

dependencies = [
    "tomli == 2.0.1",
    "tomli_w == 1.0.0",
    "bullet == 2.2.0"
]

[project.scripts]
pystrap = "pystrap.main:main"

[project.optional-dependencies]
dev = ["flake8", "isort", "mypy", "pydocstyle"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]

build-backend = "setuptools.build_meta"
