[metadata]
name = pystrap
discription = A simple CLI util to setup python projects.
author = Max Weise
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = pystrap
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
